se empezo con la actividad y se crearon contenedores para todo el contenido

--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gustos Personales</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<header class="header-container">
+    <h1>Pagina Personal</h1>
+</header>
 
-    <header> Titulo de la Pagina pro</header>
+<body class="body-container">
+    <div class="main-container">
+        <div class="top-container">
+            <div class="elements-container">
+                <img src="Auto.jpg" alt="">
+                <h2>Automovilismo</h2>
+                <p>XD</p>
+            </div>
+            <div class="elements-container">
+                <h2>Musica</h2>
+            </div>
+        </div>
 
-  
+       <div class="bottom-container">
+         <div class="elements-container">
+            <h2>Peliculas</h2>
+        </div>
+        <div class="elements-container">
+            <h2>Videojuegos</h2>
+        </div>
+       </div>
+    </div>
 </body>
+
 </html>
