Se agrego informacion a la pagina, la cual se encuentra, peliculas, automovilismo, musica y videojuegos, tambien se colocaron imagenes

--- a/index.html
+++ b/index.html
@@ -1,38 +1,95 @@
 <!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gustos Personales</title>
     <link rel="stylesheet" href="style.css" />
-</head>
-<header class="header-container">
+  </head>
+  <header class="header-container">
     <h1>Pagina Personal</h1>
-</header>
+  </header>
 
-<body class="body-container">
+  <body class="body-container">
     <div class="main-container">
-        <div class="top-container">
-            <div class="elements-container">
-                <img src="Auto.jpg" alt="">
-                <h2>Automovilismo</h2>
-                <p>XD</p>
+      <div class="top-container">
+        <div class="elements-container">
+          <div class="img-container">
+            <div class="img-elements">
+              <img src="REXY.jpg" alt="" />
+              <img src="F1.jpg" alt="" />
             </div>
-            <div class="elements-container">
-                <h2>Musica</h2>
+            <div class="img-elements">
+              <img  src="JDM.jpg" alt="" />
+              <img  src="Drift.gif" alt="" />
             </div>
-        </div>
-
-       <div class="bottom-container">
-         <div class="elements-container">
-            <h2>Peliculas</h2>
+          </div>
+          <h2>Automovilismo</h2>
+          <p>
+            <b
+              >Mi gusto por los coches claro biene desde que vi casi toda la
+              saga de Fast and Furious y desde el 2024 que me gusta la F1 y el
+              gif que se ve, es dos carros haciendo drift una de las cosas que me gustaria
+              llegar a hacer, mi gusto por los carros JDM(Japoneses), viene de la pelicula de Reto Tokio</b>
+          </p>
         </div>
         <div class="elements-container">
-            <h2>Videojuegos</h2>
-        </div>
-       </div>
-    </div>
-</body>
+          <div class="img-container-music">
+            <div class="img-music-elements"> 
+              <img src="Daft Punk.jpg" alt="" />
+              <img src="Amerincan Idiot.jpg" alt="" />
+            </div>
+              <div class="img-music-elements">
+                <img src="INSPECTOR!!!.jpg" alt="" />
+                <img src="Master of Popped.gif" alt="" />
+              </div>
+            </div>
+          <h2>Musica</h2>
+          <p><b>Mis gustos en cuestion de la musica, son varaiados, aveces me gusta el rock y
+            otro dia ya ando escuchando otro genero musical, pero asi para resumir, unas de las bandas de 
+            electronica-rock, Daft Punk, una chulada sus canciones, Metallica con su cancion mas larga de 7 minutos
+            Master of Puppet, Green Day de ellos me gustan la que se llama American Idiot y tambien la de Basket canciones
+            y claro ya por ultimo, del genero musical Ska, INSPECTOR!!!, de ellos me gusta la de Un osito dormilo, que esa
+            la canta en dueto con otro grupo del Genero Ska que se llama El Gran Silencio</b>
+          </p> 
+      </div>
 
+      <div class="bottom-container">
+        <div class="elements-container">
+          <div class="img-container-pictur">
+            <div class="img-elements-pictur">
+              <img src="Fast ant Furious.jpg" alt="" />
+              <img src="Jhon Wick.jpg" alt="" /> 
+            </div>
+            <div class="img-elements-pictur">
+              <img src="TRON.jpg" alt="" />
+              <img src="volver al Futuro.jpg" alt="" />
+            </div>        
+          </div>
+          <h2>Peliculas</h2>
+          <p><b>No podia faltar mi pasion por los coches, empezamos con Rapidos y Furiosos
+            yo creo que apartir de esas peliculas nacio mi amor por los coches y por tener un negocio
+            de mecanica, yo soy mucho se ver peliculas de accion y John Wick es una de mis favoritas, sera que 
+            sus tres peliculas me las vi y las tres son completamente cine puro, un clasico tambien TRON, de las
+            primeras peliculas que vi y me emocionaba cada que peleaban y sacaban sus motos de luz, y tambien es buena
+            pelicula para escuchar muchos terminos de programacion y ya por ultimo otro clasico, Volver al Futuro es de 
+            esas peliculas que puedo repetir y no me aburro, las 3 peliculas entretienen mucho</b>
+          </p>
+        </div>
+        <div class="elements-container">
+          <div class="img-container-videogame">
+            <div class="img-elements">
+              <img src="" alt="" />
+              <img src="" alt="" />
+            </div>
+            <div class=""> 
+              <img src="" alt="" />
+              <img src="" alt="" />
+            </div>
+          <h2>Videojuegos</h2>
+          <p>Explicacion del gusto</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
