Se le coloco estilo al texto y se cambio el color y se realizo la ultima seccion que faltaba

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+NZ+Basic:wght@100..400&display=swap" rel="stylesheet">
     <title>Gustos Personales</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -16,78 +19,96 @@
         <div class="elements-container">
           <div class="img-container">
             <div class="img-elements">
-              <img src="REXY.jpg" alt="" />
-              <img src="F1.jpg" alt="" />
+              <img src="./img/REXY.jpg" alt="" />
+              <img src="./img/F1.jpg" alt="" />
             </div>
             <div class="img-elements">
-              <img  src="JDM.jpg" alt="" />
-              <img  src="Drift.gif" alt="" />
+              <img  src="./img/JDM.jpg" alt="" />
+              <img  src="./img/Drift.gif" alt="" />
             </div>
           </div>
           <h2>Automovilismo</h2>
-          <p>
-            <b
-              >Mi gusto por los coches claro biene desde que vi casi toda la
+          <div class="text-container">
+            <p>
+              Mi gusto por los coches claro biene desde que vi casi toda la
               saga de Fast and Furious y desde el 2024 que me gusta la F1 y el
               gif que se ve, es dos carros haciendo drift una de las cosas que me gustaria
-              llegar a hacer, mi gusto por los carros JDM(Japoneses), viene de la pelicula de Reto Tokio</b>
-          </p>
+              llegar a hacer, mi gusto por los carros JDM(Japoneses), viene de la pelicula de Reto Tokio
+            </p>
+          </div>
         </div>
         <div class="elements-container">
           <div class="img-container-music">
             <div class="img-music-elements"> 
-              <img src="Daft Punk.jpg" alt="" />
-              <img src="Amerincan Idiot.jpg" alt="" />
+              <img src="./img/Daft Punk.jpg" alt="" />
+              <img src="./img/Amerincan Idiot.jpg" alt="" />
             </div>
               <div class="img-music-elements">
-                <img src="INSPECTOR!!!.jpg" alt="" />
-                <img src="Master of Popped.gif" alt="" />
+                <img src="./img/INSPECTOR!!!.jpg" alt="" />
+                <img src="./img/Master of Popped.gif" alt="" />
               </div>
             </div>
           <h2>Musica</h2>
-          <p><b>Mis gustos en cuestion de la musica, son varaiados, aveces me gusta el rock y
-            otro dia ya ando escuchando otro genero musical, pero asi para resumir, unas de las bandas de 
-            electronica-rock, Daft Punk, una chulada sus canciones, Metallica con su cancion mas larga de 7 minutos
-            Master of Puppet, Green Day de ellos me gustan la que se llama American Idiot y tambien la de Basket canciones
-            y claro ya por ultimo, del genero musical Ska, INSPECTOR!!!, de ellos me gusta la de Un osito dormilo, que esa
-            la canta en dueto con otro grupo del Genero Ska que se llama El Gran Silencio</b>
-          </p> 
+          <div class="text-container-music">
+            <p>
+              Mis gustos en cuestion de la musica, son varaiados, aveces me gusta el rock y
+              otro dia ya ando escuchando otro genero musical, pero asi para resumir, unas de las bandas de 
+              electronica-rock, Daft Punk, una chulada sus canciones, Metallica con su cancion mas larga de 7 minutos
+              Master of Puppet, Green Day de ellos me gustan la que se llama American Idiot y tambien la de Basket canciones
+              y claro ya por ultimo, del genero musical Ska, INSPECTOR!!!, de ellos me gusta la de Un osito dormilo, que esa
+              a canta en dueto con otro grupo del Genero Ska que se llama El Gran Silencio
+            </p> 
+          </div>
       </div>
 
       <div class="bottom-container">
         <div class="elements-container">
           <div class="img-container-pictur">
             <div class="img-elements-pictur">
-              <img src="Fast ant Furious.jpg" alt="" />
-              <img src="Jhon Wick.jpg" alt="" /> 
+              <img src="./img/Fast ant Furious.jpg" alt="" />
+              <img src="./img/Jhon Wick.jpg" alt="" /> 
             </div>
             <div class="img-elements-pictur">
-              <img src="TRON.jpg" alt="" />
-              <img src="volver al Futuro.jpg" alt="" />
+              <img src="./img/TRON.jpg" alt="" />
+              <img src="./img/volver al Futuro.jpg" alt="" />
             </div>        
           </div>
           <h2>Peliculas</h2>
-          <p><b>No podia faltar mi pasion por los coches, empezamos con Rapidos y Furiosos
-            yo creo que apartir de esas peliculas nacio mi amor por los coches y por tener un negocio
-            de mecanica, yo soy mucho se ver peliculas de accion y John Wick es una de mis favoritas, sera que 
-            sus tres peliculas me las vi y las tres son completamente cine puro, un clasico tambien TRON, de las
-            primeras peliculas que vi y me emocionaba cada que peleaban y sacaban sus motos de luz, y tambien es buena
-            pelicula para escuchar muchos terminos de programacion y ya por ultimo otro clasico, Volver al Futuro es de 
-            esas peliculas que puedo repetir y no me aburro, las 3 peliculas entretienen mucho</b>
-          </p>
+          <div class="text-container-picture">
+            <p>
+              No podia faltar mi pasion por los coches, empezamos con Rapidos y Furiosos
+              yo creo que apartir de esas peliculas nacio mi amor por los coches y por tener un negocio
+             de mecanica, yo soy mucho se ver peliculas de accion y John Wick es una de mis favoritas, sera que 
+              sus tres peliculas me las vi y las tres son completamente cine puro, un clasico tambien TRON, de las
+              primeras peliculas que vi y me emocionaba cada que peleaban y sacaban sus motos de luz, y tambien es buena
+              pelicula para escuchar muchos terminos de programacion y ya por ultimo otro clasico, Volver al Futuro es de 
+              esas peliculas que puedo repetir y no me aburro, las 3 peliculas entretienen mucho
+            </p>
+          </div>
         </div>
         <div class="elements-container">
           <div class="img-container-videogame">
-            <div class="img-elements">
-              <img src="" alt="" />
-              <img src="" alt="" />
+            <div class="img-elements-videogames">
+              <img src="./img/Call of Duty.jpg" alt="" />
+              <img src="./img/Helldivers.jpg" alt="" />
             </div>
-            <div class=""> 
-              <img src="" alt="" />
-              <img src="" alt="" />
+            <div class="img-elements-videogames"> 
+              <img src="./img/Vaqueros.jpg" alt="" />
+              <img src="./img/God of War Ragnarok.gif" alt="" />
             </div>
           <h2>Videojuegos</h2>
-          <p>Explicacion del gusto</p>
+          <div class="text-container-videogame">
+            <p>
+              Aca otro de mis gustos, que puedo decir, helldaivers desde que lo anunciaraon, ya lo queria jugar
+              hasta la fecha es un juego que no me aburre y esta lleno de mucha adrenalina cuando le subes la dificualtad
+              god of war es otro de mis favoritos, porque aparte de su buena historia, me gusta la modalidad de juego,
+              el ver la mejora del arma, mejoras en el personaje, eso es lo que me gusta de un juego y god of war lo tiene 
+              otro que tambien me gusta mucho que ya tengo todos los roles completados solo me falta uno, es el Red Dead Redemption
+              juego que combina historia y accion y lo que me gusta que es ver la mejora en el personaje y para terminar,
+              Call of Duty en especial si lo llego a jugar aveces, en su modo battleroyal o su modo de resurgimiento, ahi soy muy bueno
+              con los tiros a distancia con francotirador, y juego mas cosas, pero estos se podrian predominar los juegos que mas me han gustado
+            </p>
+          </div>
         </div>
       </div>
     </div>
