Se modifico algo, pero regreso al original

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <h2>Automovilismo</h2>
           <div class="text-container">
             <p>
-              Mi gusto por los coches claro biene desde que vi casi toda la
+              Mi gusto por los coches claro viene desde que vi casi toda la
               saga de Fast and Furious y desde el 2024 que me gusta la F1 y el
-              gif que se ve, es dos carros haciendo drift una de las cosas que me gustaria
-              llegar a hacer, mi gusto por los carros JDM(Japoneses), viene de la pelicula de Reto Tokio
+              gif que se ve, son dos carros haciendo drift, una de las cosas que me gustaría
+              llegar a hacer. Mi gusto por los carros JDM (japoneses) viene de la película de Reto Tokio.
             </p>
           </div>
         </div>
@@ -51,12 +51,12 @@
           <h2>Musica</h2>
           <div class="text-container-music">
             <p>
-              Mis gustos en cuestion de la musica, son varaiados, aveces me gusta el rock y
-              otro dia ya ando escuchando otro genero musical, pero asi para resumir, unas de las bandas de 
-              electronica-rock, Daft Punk, una chulada sus canciones, Metallica con su cancion mas larga de 7 minutos
-              Master of Puppet, Green Day de ellos me gustan la que se llama American Idiot y tambien la de Basket canciones
-              y claro ya por ultimo, del genero musical Ska, INSPECTOR!!!, de ellos me gusta la de Un osito dormilo, que esa
-              a canta en dueto con otro grupo del Genero Ska que se llama El Gran Silencio
+              Mis gustos en cuestión de la música son variados, a veces me gusta el rock y
+              otro día ya ando escuchando otro género musical, pero así para resumir, unas de las bandas de
+              electrónica-rock: Daft Punk, una chulada sus canciones; Metallica con su canción más larga de 7 minutos,
+              aster of Puppets; Green Day, de ellos me gustan la que se llama American Idiot y también la de Basket canciones.
+              Y claro, ya por último, del género musical ska, ¡INSPECTOR!, de ellos me gusta la de Un osito dormilón, que esa
+              la canta en dueto con otro grupo del género ska que se llama El Gran Silencio.
             </p> 
           </div>
       </div>
@@ -76,20 +76,20 @@
           <h2>Peliculas</h2>
           <div class="text-container-picture">
             <p>
-              No podia faltar mi pasion por los coches, empezamos con Rapidos y Furiosos
-              yo creo que apartir de esas peliculas nacio mi amor por los coches y por tener un negocio
-             de mecanica, yo soy mucho se ver peliculas de accion y John Wick es una de mis favoritas, sera que 
-              sus tres peliculas me las vi y las tres son completamente cine puro, un clasico tambien TRON, de las
-              primeras peliculas que vi y me emocionaba cada que peleaban y sacaban sus motos de luz, y tambien es buena
-              pelicula para escuchar muchos terminos de programacion y ya por ultimo otro clasico, Volver al Futuro es de 
-              esas peliculas que puedo repetir y no me aburro, las 3 peliculas entretienen mucho
+              No podía faltar mi pasión por los coches, empezamos con Rápidos y Furiosos.
+              Yo creo que a partir de esas películas nació mi amor por los coches y por tener un negocio
+              de mecánica. Yo soy mucho de ver películas de acción y John Wick es una de mis favoritas, será que
+              sus tres películas me las vi y las tres son completamente cine puro. Un clásico también, TRON, de las
+              primeras películas que vi y me emocionaba cada que peleaban y sacaban sus motos de luz, y también es buena
+              película para escuchar muchos términos de programación. Y ya por último, otro clásico, Volver al Futuro es de
+              esas películas que puedo repetir y no me aburro, las 3 películas entretienen mucho.
             </p>
           </div>
         </div>
         <div class="elements-container">
           <div class="img-container-videogame">
             <div class="img-elements-videogames">
-              <img src="./img/Call of Duty.jpg" alt="" />
+              <img src="./img/WARZONE.jpg" alt="" />
               <img src="./img/Helldivers.jpg" alt="" />
             </div>
             <div class="img-elements-videogames"> 
@@ -99,14 +99,14 @@
           <h2>Videojuegos</h2>
           <div class="text-container-videogame">
             <p>
-              Aca otro de mis gustos, que puedo decir, helldaivers desde que lo anunciaraon, ya lo queria jugar
-              hasta la fecha es un juego que no me aburre y esta lleno de mucha adrenalina cuando le subes la dificualtad
-              god of war es otro de mis favoritos, porque aparte de su buena historia, me gusta la modalidad de juego,
-              el ver la mejora del arma, mejoras en el personaje, eso es lo que me gusta de un juego y god of war lo tiene 
-              otro que tambien me gusta mucho que ya tengo todos los roles completados solo me falta uno, es el Red Dead Redemption
-              juego que combina historia y accion y lo que me gusta que es ver la mejora en el personaje y para terminar,
-              Call of Duty en especial si lo llego a jugar aveces, en su modo battleroyal o su modo de resurgimiento, ahi soy muy bueno
-              con los tiros a distancia con francotirador, y juego mas cosas, pero estos se podrian predominar los juegos que mas me han gustado
+              Acá otro de mis gustos, ¿qué puedo decir?, Helldivers, desde que lo anunciaron ya lo quería jugar.
+              Hasta la fecha es un juego que no me aburre y está lleno de mucha adrenalina cuando le subes la dificultad.
+              God of War es otro de mis favoritos, porque aparte de su buena historia, me gusta la modalidad de juego,
+              el ver la mejora del arma, mejoras en el personaje, eso es lo que me gusta de un juego y God of War lo tiene.
+              Otro que también me gusta mucho, que ya tengo todos los roles completados, solo me falta uno, es Red Dead Redemption,
+              juego que combina historia y acción, y lo que me gusta es ver la mejora en el personaje. Y para terminar,
+              Call of Duty, en especial sí lo llego a jugar a veces, en su modo battle royale o su modo de resurgimiento, ahí soy muy bueno
+              con los tiros a distancia con francotirador, y juego más cosas, pero estos se podrían predominar los juegos que más me han gustado.
             </p>
           </div>
         </div>
